--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -12,7 +12,7 @@
 <script>
   if (window.netlifyIdentity) {
     window.netlifyIdentity.on("init", user => {
-      if (!user) {
+      if (!user && window.location.hash.includes("confirmation_token")) {
         window.netlifyIdentity.on("login", () => {
           document.location.href = "/admin";
         });
